<resources>
    <string name="app_name">Owly</string>

    <string name="mail">Mail</string>
    <string name="grades">Grades</string>
    <string name="feed">Feed</string>
    <string name="schedule">Schedule</string>
    <string name="settings">Settings</string>

    <!-- Feed -->
    <string name="open_navigation">Open navigation</string>

    <!-- Modules -->
    <string name="view_all_grades">View all grades</string>
    <string name="latest_grade"><![CDATA[Latest grade: <b>%d</b>]]></string>
    <string name="no_grades">There are no grades yet</string>

    <!-- Grades -->
    <string name="average">Average: %.1f</string>

    <!-- Assistant -->
    <string name="ask_assistant">Ask Owly assistant</string>
    <string name="first_message">Hi, what can I help you with?</string>
</resources>
